--- a/IGI/LR5/requirements.txt
+++ b/IGI/LR5/requirements.txt
@@ -1,4 +1,12 @@
 asgiref==3.8.1
+certifi==2025.4.26
+charset-normalizer==3.4.2
+coverage==7.8.2
 Django==5.2.1
+idna==3.10
+pillow==11.2.1
+pytz==2025.2
+requests==2.32.3
 sqlparse==0.5.3
 typing_extensions==4.13.2
+urllib3==2.4.0
